# stripe-merging

./: Readme.md
examples/cpp/helloworld/: greeter_client.cc  greeter_server.cc
examples/cpp/keyvaluestore/: server.cc
grpc/lib/: libz.so.1.2.11
grpc/lib/cmake/c-ares/: c-ares-targets.cmake
grpc/lib/cmake/grpc/: gRPCConfig.cmake  gRPCConfigVersion.cmake  gRPCTargets-release.cmake  gRPCTargets.cmake
grpc/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets-release.cmake
grpc/lib/pkgconfig/: gpr.pc  grpc++.pc  grpc++_unsecure.pc  grpc.pc  grpc_unsecure.pc  protobuf-lite.pc  protobuf.pc
ms_code/: run.sh
ms_code/prototype/: CMakeLists.txt  a.txt  client.cpp  coordinator.cpp  datanode.cpp  main
ms_code/prototype/conf/: cluster.xml  configuration.xml  old_cluster.xml
ms_code/prototype/data/: 110104  110108  210101  210105  210107
ms_code/prototype/include/: FileSystemClient.h  FileSystemCoordinator.h  FileSystemDataNode.h  MetaInfo.h  ToolBox.h  combination_generator.h  devcommon.h  pugiconfig.hpp  pugixml.cpp
ms_code/prototype/include/Jerasure/include/: config.h
ms_code/prototype/include/Jerasure/src/: Makefile  Makefile.in  cauchy.lo  galois.lo  jerasure.lo  liberation.lo  reed_sol.lo
ms_code/prototype/include/Jerasure/src/.deps/: cauchy.Plo  galois.Plo  jerasure.Plo  liberation.Plo  reed_sol.Plo  timing.Po
ms_code/prototype/include/Jerasure/src/.libs/: libJerasure.la  libJerasure.lai  libJerasure.so.2
ms_code/prototype/include/erasurecoding/: LRCCoder.h
ms_code/prototype/log/: logFile.txt
ms_code/prototype/src/: FileSystemClient.cpp  FileSystemCoordinator.cpp  FileSystemDataNode.cpp  ToolBox.cpp  pugixml.cpp
ms_code/prototype/src/proto/: coordinator.grpc.pb.cc  coordinator.grpc.pb.h  coordinator.pb.cc  coordinator.pb.h  coordinator.proto  datanode.grpc.pb.cc  datanode.grpc.pb.h  datanode.pb.cc  datanode.pb.h  datanode.proto
ms_code/prototype/teststripes/: teststripe0.txt  teststripe6.txt
protobuf/lib/cmake/protobuf/: protobuf-targets-release.cmake
protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
